cabal-version:      3.0
name:               garden
version:            0.1.0.0
license:            BSD-3-Clause
author:             Sean O'Mara
maintainer:         mseanomara@gmail.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable garden
    import:           warnings
    main-is:          Main.hs
    other-modules:    Types
                    , TableOfContents
    build-depends:    base ^>=4.18.2.1
                    , directory
                    , filepath
                    , containers
                    , commonmark
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
